# dragonet

./: .gitignore  .gitmodules  README  demoInstrustions.rst
Dragonet/: .gitignore  .ycm_extra_conf.py  BoolExp.hs  CodeExplanation.org  Computations.hs  Conditions.hs  Configurations.hs  DotGenerator.hs  Dragonet.cabal  Dragonet.hs  E10k.hs  E10kPRG.hs  E1k.hs  Embedding.hs  INSTALL.sh  INSTALL.txt  LPG.hs  LPGConf.hs  LPGEx1.hs  LPGEx2.hs  LPGImpl.hs  LPGImplTH.hs  LPGicmp.hs  MachineDetails.hs  Makefile  Makefile.llvm-helpers  MyGraph.hs  NetBasics.hs  NetworkProcessing.hs  Operations.hs  PRG.hs  README.rst  README.txt  SF.hs  SFtx.hs  Setup.hs  cabal.config  cleanCompile.sh  convertConfGen.sh  convertDot.sh  (+56 more)
Dragonet/Dragonet/: Configuration.hs  Constraints.hs  DotGenerator.hs  Embedding.hs  Implementation.hs  Pipelines.hs  ProtocolGraph.hs  Unicorn.hs
Dragonet/Graphs/: Cfg.hs  E10k.hs  Helpers.hs  ImplTransforms.hs  LPG.hs  Null.hs  SF.hs  Tap.hs
Dragonet/LPGImpl/: LPGImplBase.hs  LPGImplGen.hs  LPGImplTCP.hs  LPGImplTx.hs
Dragonet/Runner/: Common.hs  Dynamic.hs  E10KControl.hs  E10KPolicy.hs  LLVM.hs  dyn_helpers.c  dyn_local.c  dyn_local.h  dyn_remote.h  dyn_remote_client.c  dyn_remote_server.c  dynamic.c  dynamic.h  rt_queue.c  rt_queue.h
Dragonet/Scenarios/: S1.hs  S2.hs  S3.hs
Dragonet/Util/: BoolExp.hs  BoolExpParser.hs  Dpdk.hs  GraphHelpers.hs  GraphMonad.hs  Misc.hs  Openonload.hs  tap.c
Dragonet/apps/: DragonetApp.cabal  Dummy.hs
Dragonet/bakV1/: Dragonet.hs  E1k.hs  Makefile  MyGraph.hs  PRG.hs
Dragonet/c_impl/: Makefile  config.h  impl_arp.c  impl_dpdk.c  impl_e10k.c  impl_ethernet.c  impl_icmp.c  impl_ipv4.c  impl_misc.c  impl_null.c  impl_tap.c  impl_tcp.c  impl_udp.c  implementation.c  implementation.h  net_stack.c  sfWrapper.h  state.c  tapWrapper.c  test.c
Dragonet/cleanup/: Makefile  testGraph.hs  testPLOS13.hs
Dragonet/debug_scripts/: debug_tcpdump_sf_appenzeller.sh
Dragonet/dsltest/: BoolExp.hs  BoolExpParser.hs  DotGenerator.hs  DragonetDSL.hs  Embedding.hs  Makefile  Operations.hs  Unicorn.hs  copyToPaper.sh  implementation.hs  lpg.dragonet  lpgImpl.dragonet  lpgImpl.unicorn  prgTests.hs  testConstraints.hs  testEmbed.hs  testEmbedQueues.hs  testexp.hs
Dragonet/fitness/: Fitness.hs  FitnessHelpers.hs
Dragonet/notes/: DNet-API  Solver
Dragonet/old/: Embedding.hs  Makefile  copyToPaper.sh  run.sh
Dragonet/packets/: arp_request  icmp_response
Dragonet/scripts/: convertDot.sh  convertDotDir.sh  dot2pdf.zsh  uni2dot.zsh  uni2pdf.zsh  unicorn.vim  uniwatch.zsh
Dragonet/stack/: DpdkImpl.hs  OnloadImpl.hs  Search.hs  Stack.hs  stack-dpdk.hs  stack-e10k-dummy.hs  stack-e10k.hs  stack-null.hs  stack-sf.hs  stack-tap.hs
Dragonet/test_scripts/: debug_tcpdump.sh  nc_test.sh  nc_test_sf.sh  ping_sf.sh  scriptRun.sh  test_tuntap_ping.sh
Dragonet/tests/: BalanceAcrossRxQs.hs  Cleanup.hs  Embedding.hs  OffloadTest.hs  OracleTest.hs  Predicate.hs  benchSearch.hs  incrementalConfig.hs  search.hs
Dragonet/unicorn-tests/: hello.unicorn  multi_node_port.unicorn  offload-tx-lpg.unicorn  offload-tx-prg.unicorn  or.unicorn
PRG/: BCM5704.hs  ExampleLPG.hs  Makefile  e10k.hs  e1k.hs  tulip.hs
PRG/DecisionTree/: ConvertDecision.hs  DecisionTree.hs
PRG/LPG/: LogicalProtocolGraph.hs
benchmarking/bm/: bm_loopback_bw.sh
benchmarking/dstat/: convert_json.py  dstat
benchmarking/libmemcached-1.0.18/: Makefile.in  README_DRAGONET.rst  bmKey_64_val_1024.conf  bmKey_64_val_64.conf  configure_install_dragonet.sh  memaslapWrapper.sh
benchmarking/memcached/: Makefile.am  README_DRAGONET.rst  configure.ac  dnet_interface.c  dnet_interface.h  memcached.c  memcached.h  thread.c  useful_commands.sh
benchmarking/memcached/dragonet/: helpers.c  helpers.h  implementation.c  implementation.h  packet_access.h  pipelinesHelpers.c  state.c  tap.h
benchmarking/memcached/flowtable/: misc.h  xht.c  xht.h
benchmarking/micro/: Makefile  concurrent_tpbench.sh  fancyEchoLinux.c  udp_echo.c  udp_rttbench.c  udp_tpbench.c
benchmarking/netperf-2.6.0/: configure_compile.sh
benchmarking/netperf-wrapper/: README.rst  cleanup.sh  data_collection.sh  (+26 more)
doc/: embedding.tex  unicorn.tex
dpdk-1.5.0r1/: doConfig.sh
dpdk-1.7.1/: README_DRAGONET.rst  doConfig.sh  dragonet_bind_ethernet.sh
dpdk_helpers/: get_repository.sh  install.sh  prepare-machine-gen.sh  resolv.conf  setIPaddress.sh  set_asiago.sh  summary.rst
e1000/: RXPath.click
e10k/: ConvertDecision.hs  DecisionTree.hs  Makefile  NICState.hs  e10k.hs  filters.txt
install_helpers/: get_repository.sh  install.sh  machineSetup.txt  prepare-machine-antoine.sh  prepare-machine-gen.sh  setIPaddress.sh  setStaticARP.sh  set_babybel2.sh
openonload-201310-u2/: .gitignore
scenario/: example_workload.txt
scripts/: qsmg.sh
(+651 files in other folders)
